public/styles.css
:root{
  --basicBorder:  1px solid rgb(246, 250, 255);
}


*{
  box-sizing: border-box;
  /* border: 1px solid red; */
  font-family: 'Raleway', sans-serif;
}
body{
  margin: 0;
  padding: 0;
  background-color: #444;
  color: #eee;
  font-family: sans-serif;
}

hr{
  height: 1px;
  border: none;
  background-color: rgb(246, 250, 255);
}

header, footer{
  position: fixed;
  /* width: 100%; */
  backdrop-filter: blur(5px);
  background-color: #333;
  z-index: 9;
  padding: 1.5rem;
  top: 0;
  left: 0;
  right: 0;
}
footer{
  top: unset;
  bottom: 0;
  text-align: center;
}
footer a{
  color: white;
}

h1.page-head{
  text-align: center;
  font-size: 2.5rem;
  margin: 0;
}
main{
  margin: 10rem auto;
  width: 80%;
}

form.adder{
  display: none;
}

div.btpar{
  display: flex;
  justify-content: center;
  align-items: center;
}
input::placeholder, textarea::placeholder{
  color: #bbb;
}
button{
  padding: 0.6rem;
  margin: 0 1.2rem;
  border: none;
  outline: none;
  font-weight: bold;
}
button#pro{
  background-color: #d23;
  color: white;
}
button#clr{
  background-color: white;
  color: #d23;
}


input#n-heading, input#n-author{
  width: 100%;
  height: 1.8rem;
  margin: 0.6rem 0;
  padding: 0.6rem;
  border: var(--basicBorder);
  background-color: rgba(0,0,0,0.1);
  border-radius: 12px;
  color: #eee;
  outline: none;
}
textarea#n-text{
  width: 100%;
  height: 2.8rem;
  margin: 0.6rem 0;
  padding: 0.6rem;
  border: var(--basicBorder);
  background-color: rgba(0,0,0,0.1);
  border-radius: 12px;
  color: #eee;
  outline: none;
}

.saved{
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
}

div.n-note{
  opacity: 0.9;
  /* background: var(--noBg); */
  margin: 0.6rem;
  border: var(--basicBorder);
  border-radius: 12px;
  padding: 1.2rem;
  box-shadow: 0 0 5px 0px rgba(0,0,0,0.2);
  position: relative;
  flex-basis: calc(50% - 1.2rem);
}
div.n-note:hover{
  opacity: 1;
}
.dots3{
  height: 4px;
  width: 4px;
  border-radius: 50%;
  background-color: #ddd;
  margin: 1px;
}
.edit-3dot-icon{
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  min-height: 16px;
  padding: 0.5rem;
  position: absolute;
  right: 0.5rem;
  top: 0.5rem;
}

.hidden-menu{
  position: absolute;
  top: 2rem;
  right: 1rem;
  background-color: #ddd;
}
.hidden-menu-elements{
  padding: 0.25rem;
  cursor: pointer;
  color: black;
}
.hidden-menu-elements:hover{
  background-color: #ccc;
}

.n-heading, .n-text, .n-author{
  width: calc(100% - 0.5rem);
  border: none;
  color: inherit;
  border-radius: 5px;
  padding: 0.25rem;
  margin: 0.25rem;
}

.n-heading{
  display: block;
  font-size: 1.5rem;
  font-weight: bold;
}
.n-text{
  display: block;
  font-size: 1.2rem;
  resize: none;
}
.n-author{
  display: block;
  font-size: 0.8rem;
  opacity: 0.9;
}

article.modal{
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0,0,0,0.2);
  backdrop-filter: blur(5px);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 99;
}

.edit-heading, .edit-text, .edit-author{
  width: calc(100% - 0.5rem);
  display: block;
  background-color: rgba(255,255,255,0.2);
  border: none;
  outline: none;
  color: inherit;
  border-radius: 5px;
  padding: 0.25rem;
  margin: 0.25rem;
}
.edit-heading:hover, .edit-text:hover, .edit-author:hover{
  background-color: rgba(255,255,255,0.3);
}
.edit-buttons-parent{
  display: flex;
  justify-content: space-evenly;
}
.edit-button{
  text-align: center;
  flex: 1;
  cursor: pointer;
  background-color: #d23;
  max-width: 150px;
  margin: 0.5rem;
  border-radius: 5px;
  padding: 0.25rem;
}
.edit-button:hover{
  background-color: rgb(243, 83, 96);
}
.edit-inputs-parent{
  border: var(--basicBorder);
  border-radius: 5px;
  padding: 1rem;
  width: 40%;
  min-width: 360px;
  max-width: 540px;
}
.colors > div{
  height: 20px;
  width: 20px;
  border-radius: 50%;
}
.edit-color{
  display: none;
}
.edit-color:checked + div{
  border: 2px solid white;
}

.edit-color-parent{
  display: flex;
  justify-content: space-around;
  align-items: center;
}


section.free{
  position: fixed;
  bottom: 2rem;
  right: 2rem;
  z-index: 10;
}

div.add > span{
  display: flex;
  margin: 1.2rem auto;
  justify-content: center;
  align-items: center;
  width: 3rem;
  height: 3rem;
  font-size: 1.5rem;
  border-radius: 50%;
  color: #def;
  background-color: #d23;
  text-align: center;
  cursor: pointer;
}
div.add > span:hover{
  background-color: rgb(243, 83, 96);
}

@media all and (max-width: 950px){
  div.n-note{
    flex-basis: 100%;
  }
}

@media all and (max-width: 600px){
  .edit-inputs-parent{
    width: 70%;
    min-width: 140px;
  }
}

@media all and (max-width: 350px){
  h1.page-head{
    font-size: 1.8rem;
  }
}

.hide{
  display: none !important;
}
.bg0{
  background-image: linear-gradient(90deg, #333, #222);
}
.bg1{
  background-image: linear-gradient(90deg, rgb(0, 128, 255), #24f);
}
.bg2{
  background-image:  linear-gradient(90deg, rgb(59, 183, 143), rgb(11, 171, 100));
}
.bg3{
  background-image:  linear-gradient(90deg, rgb(243, 86, 96), rgb(255, 36, 70));
}
.bg4{
  background-image: linear-gradient(90deg, rgb(236, 159, 5),rgb(255, 78, 0));
}
.bg5{
  background-image: linear-gradient(90deg, rgb(233, 97, 150),rgb(232, 37, 181));
}
.bg6{
  background-image: linear-gradient(90deg,rgb(21, 219, 143), rgb(12, 182, 139));
}
.bg7{
  background-image: linear-gradient(90deg,rgb(132, 194, 16), rgb(15, 214, 79));
}
.bg8{
  background-image: linear-gradient(90deg,rgb(203, 33, 142),rgb(102, 23, 203));
}

